# youtube-uploader

./: .codespellrc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  README_BADGES.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  upload.py
.github/workflows/: lint.yml  security.yml  test.yml
tests/: __init__.py  test_authentication.py  test_upload.py
tests/fixtures/: test_metadata.json
youtube_uploader/: __init__.py  main.py
